--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,6 +2,8 @@ git statusversion: 0.2
 
 phases:
   install:
+    runtime-versions:
+            nodejs: 18.x
     commands:
       - echo Installing Serverless...
       - npm install -g serverless
