--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,13 +12,14 @@ phases:
     commands:
       - echo Install source NPM dependencies...
       - npm install
-      - serverless config credentials --provider aws --key $AWS_ACCESS_KEY_ID --secret $AWS_SECRET_ACCESS_KEY
+      - export SERVERLESS_LICENSE_KEY=your_license_key_here
+      - echo serverless config credentials --provider aws --key $AWS_ACCESS_KEY_ID --secret $AWS_SECRET_ACCESS_KEY
   build:
     commands:
       - echo Deployment started on `date`
       - echo Deploying with the Serverless Framework
       - echo serverless deploy -v -s $ENV_NAME --debug
-      - serverless login --verbose
+      - echo serverless login --verbose
       - serverless deploy -s prod --debug
   post_build:
     commands:
