--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,6 +14,10 @@ phases:
       - npm install
       - export SERVERLESS_LICENSE_KEY=your_license_key_here
       - echo serverless config credentials --provider aws --key $AWS_ACCESS_KEY_ID --secret $AWS_SECRET_ACCESS_KEY
+      - echo "Checking Serverless Framework version..."
+      - which serverless || echo "Serverless Framework not found!"
+      - serverless -v || echo "Failed to get Serverless version"
+      
   build:
     commands:
       - echo Deployment started on `date`
