--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"No tests configured yet\" && exit 0",
+    "deploy": "serverless deploy",
+    "deploy:prod": "serverless deploy --stage prod",
+    "remove": "serverless remove",
+    "info": "serverless info"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +16,8 @@
   "dependencies": {
     "aws-sdk": "^2.1692.0",
     "moment": "^2.30.1",
+    "pg": "^8.11.0",
+    "pg-pool": "^3.6.0",
     "serverless-offline": "^14.4.0",
     "underscore": "^1.13.7",
     "uuid": "^11.0.5"
