--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "moment": "^2.30.1",
     "pg": "^8.11.0",
     "pg-pool": "^3.6.0",
-    "serverless-offline": "^14.4.0",
     "underscore": "^1.13.7",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
-    "serverless-domain-manager": "^8.0.0"
+    "serverless-domain-manager": "^8.0.0",
+    "serverless-offline": "^14.4.0"
   }
 }
